--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,18 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Rubik|Rubik+Mono+One" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background-color: #F7F7F7 !important;">
   <app-root></app-root>
+  <script>
+    function cambiar_estado(actual, siguiente) {
+      $("#"+actual).removeClass('active');
+      $("#"+siguiente).addClass('active');
+    }
+  </script>
 </body>
 </html>
